<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/training_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_name"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/training_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_type"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="4dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/training_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_time"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="4dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/training_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_description"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="4dp"
        android:textSize="14sp" />


</LinearLayout>
