<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/training_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_name"
                android:textSize="18sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70" />

            <TextView
                android:id="@+id/training_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"

                android:text="@string/training_time"
                android:textSize="18sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/training_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_type"
            android:textSize="18sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/training_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_description"
            android:textSize="14sp"
            android:padding="10dp"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>
